manifests/seraphim/prod/homepage/Deployment-homepage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/name: homepage
    app.kubernetes.io/part-of: homepage
    app.kubernetes.io/version: v1.12.3
  name: homepage
  namespace: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: homepage
      app.kubernetes.io/name: homepage
  template:
    metadata:
      labels:
        app.kubernetes.io/component: main
        app.kubernetes.io/instance: homepage
        app.kubernetes.io/name: homepage
        app.kubernetes.io/part-of: homepage
        app.kubernetes.io/version: v1.12.3
    spec:
      containers:
        - env:
            - name: HOMEPAGE_ALLOWED_HOSTS
              value: home.vegapunk.cloud
            - name: HOMEPAGE_VAR_JELLYFIN_API_KEY
              valueFrom:
                secretKeyRef:
                  key: jellyfin-api-key
                  name: integrations
            - name: HOMEPAGE_VAR_KOMGA_API_KEY
              valueFrom:
                secretKeyRef:
                  key: komga-api-key
                  name: integrations
            - name: HOMEPAGE_VAR_QBITTORRENT_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: qbittorrent-password
                  name: integrations
            - name: HOMEPAGE_VAR_QBITTORRENT_URL
              valueFrom:
                secretKeyRef:
                  key: qbittorrent-url
                  name: integrations
            - name: HOMEPAGE_VAR_QBITTORRENT_USERNAME
              valueFrom:
                secretKeyRef:
                  key: qbittorrent-username
                  name: integrations
            - name: HOMEPAGE_VAR_RADARR_API_KEY
              valueFrom:
                secretKeyRef:
                  key: radarr-api-key
                  name: integrations
            - name: HOMEPAGE_VAR_SEERR_API_KEY
              valueFrom:
                secretKeyRef:
                  key: seerr-api-key
                  name: integrations
            - name: HOMEPAGE_VAR_SONARR_API_KEY
              valueFrom:
                secretKeyRef:
                  key: sonarr-api-key
                  name: integrations
          image: ghcr.io/gethomepage/homepage:v1.12.3
          name: homepage
          ports:
            - containerPort: 3000
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /app/config
              name: config
            - mountPath: /app/config/logs
              name: logs
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsUser: 1000
      serviceAccountName: homepage
      volumes:
        - configMap:
            name: config
          name: config
        - emptyDir: {}
          name: logs
