manifests/seraphim/prod/homepage/HTTPRoute-homepage.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/name: homepage
    app.kubernetes.io/part-of: homepage
    app.kubernetes.io/version: v1.12.3
  name: homepage
  namespace: homepage
spec:
  hostnames:
    - home.vegapunk.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: homepage
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
